# Triskel-MC

./: README.md  pyproject.toml
notebooks/: TryTC_BDMH_np.ipynb
src/: BD_MH_step_numpy.py
src/triskel_mc/: __init__.py  bd_mh_step_numpy.py  birth_death.py  mh_moves.py  runner.py  states.py
tests/: test_refactor.py
